@@ -9,7 +9,7 @@
    <TITLE>libstdc++-v3 HOWTO:  Chapter 22</TITLE>
 <LINK REL="home" HREF="http://sources.redhat.com/libstdc++/docs/22_locale/">
 <LINK REL=StyleSheet HREF="../lib3styles.css">
-<!-- $Id: howto.html,v 1.3 2000/08/25 08:52:56 bkoz Exp $ -->
+<!-- $Id: howto.html,v 1.4 2000/08/31 01:17:53 bkoz Exp $ -->
 </HEAD>
 <BODY>
 
@@ -27,6 +27,7 @@
    <LI><A HREF="#2">Nathan Myers on Locales</A>   
    <LI><A HREF="#3">codecvt</A>
    <LI><A HREF="#4">ctype</A>
+   <LI><A HREF="#5">Correct Transformations</A>
 </UL>
 
 <HR>
@@ -40,6 +41,14 @@
       <A HREF="http://www.research.att.com/~bs/3rd.html">The C++
       Programming Language (3rd Edition)</A>.  It is a detailed
       description of locales and how to use them.
+   </P>
+   <P>He also writes:
+      <BLOCKQUOTE><EM>
+      Please note that I still consider this detailed description of
+      locales beyond the needs of most C++ programmers. It is written
+      with experienced programmers in mind and novices will do best to
+      avoid it.
+      </EM></BLOCKQUOTE>
    </P>
    <P>Return <A HREF="#top">to top of page</A> or
       <A HREF="../faq/index.html">to the FAQ</A>.
@@ -92,6 +101,114 @@ functionality are given.
       <A HREF="../faq/index.html">to the FAQ</A>.
    </P>
 
+<HR>
+<H2><A NAME="5">Correct Transformations</A></H2>
+   <!-- Jumping directly here from chapter 21. -->
+   <P>A very common question on newsgroups and mailing lists is, &quot;How
+      do I do &lt;foo&gt; to a character string?" where &lt;foo&gt; is
+      a task such as changing all the letters to uppercase, to lowercase,
+      testing for digits, etc.  A skilled and conscientious programmer
+      will follow the question with another, &quot;And how do I make the
+      code portable?&quot;
+   </P>
+   <P>(Poor innocent programmer, you have no idea the depths of trouble
+      you are getting yourself into.  'Twould be best for your sanity if
+      you dropped the whole idea and took up basket weaving instead.  No?
+      Fine, you asked for it...)
+   </P>
+   <P>The task of changing the case of a letter or classifying a character
+      as numeric, graphical, etc, all depends on the cultural context of the
+      program at runtime.  So, first you must take the portability question
+      into account.  Once you have localized the program to a particular
+      natural language, only then can you perform the specific task.
+      Unfortunately, specializing a function for a human language is not
+      as simple as declaring
+      <TT> extern &quot;Danish&quot; int tolower (int); </TT>.
+   </P>
+   <P>The C++ code to do all this proceeds in the same way.  First, a locale
+      is created.  Then member functions of that locale are called to
+      perform minor tasks.  Continuing the example from Chapter 21, we wish
+      to use the following convenience functions:
+   <PRE>
+   namespace std {
+     template &lt;class charT&gt;
+       charT
+       toupper (charT c, const locale&amp; loc) const;
+     template &lt;class charT&gt;
+       charT
+       tolower (charT c, const locale&amp; loc) const;
+   }</PRE>
+      This function extracts the appropriate &quot;facet&quot; from the
+      locale <EM>loc</EM> and calls the appropriate member function of that
+      facet, passing <EM>c</EM> as its argument.  The resulting character
+      is returned.
+   </P>
+   <P>For the C/POSIX locale, the results are the same as calling the
+      classic C <TT>toupper/tolower</TT> function that was used in previous
+      examples.  For other locales, the code should Do The Right Thing.
+   </P>
+   <P>Of course, these functions take a second argument, and the
+      transformation algorithm's operator argument can only take a single
+      parameter.  So we write simple wrapper structs to handle that.
+   </P>
+   <P>The next-to-final version of the code started in Chapter 21 looks like:
+      <PRE>
+   #include &lt;iterator&gt;    // for back_inserter
+   #include &lt;locale&gt;
+   #include &lt;string&gt;
+   #include &lt;algorithm&gt;
+   #include &lt;cctype&gt;      // old &lt;ctype.h&gt;
+
+   struct Toupper
+   {
+       Toupper (std::locale const&amp; l) : loc(l) {;}
+       char operator() (char c)  { return std::toupper(c,loc); }
+   private:
+       std::locale const&amp; loc;
+   };
+   
+   struct Tolower
+   {
+       Tolower (std::locale const&amp; l) : loc(l) {;}
+       char operator() (char c)  { return std::tolower(c,loc); }
+   private:
+       std::locale const&amp; loc;
+   };
+   
+   int main ()
+   {
+      std::string  s ("Some Kind Of Initial Input Goes Here");
+      Toupper      up ( std::locale("C") );
+      Tolower      down ( std::locale("C") );
+   
+      // Change everything into upper case
+      std::transform (s.begin(), s.end(), s.begin(),
+                      up
+                     );
+   
+      // Change everything into lower case
+      std::transform (s.begin(), s.end(), s.begin(),
+                      down
+                     );
+   
+      // Change everything back into upper case, but store the
+      // result in a different string
+      std::string  capital_s;
+      std::transform (s.begin(), s.end(), std::back_inserter(capital_s),
+                      up
+                     );
+   }</PRE>
+   </P>
+   <P>The final version of the code uses <TT>bind2nd</TT> to eliminate
+      the wrapper structs, but the resulting code is tricky.  I have not
+      shown it here because no compilers currently available to me will
+      handle it.
+   </P>
+   <P>Return <A HREF="#top">to top of page</A> or
+      <A HREF="../faq/index.html">to the FAQ</A>.
+   </P>
+
+
 
 
 <!-- ####################################################### -->
@@ -101,7 +218,7 @@ functionality are given.
 Comments and suggestions are welcome, and may be sent to
 <A HREF="mailto:pme@sources.redhat.com">Phil Edwards</A> or
 <A HREF="mailto:gdr@egcs.cygnus.com">Gabriel Dos Reis</A>.
-<BR> $Id: howto.html,v 1.3 2000/08/25 08:52:56 bkoz Exp $
+<BR> $Id: howto.html,v 1.4 2000/08/31 01:17:53 bkoz Exp $
 </EM></P>
 
 
