@@ -92,12 +92,13 @@
 
 <P>We'd also like to thank the folks who have contributed time and
    energy in testing libstdc++-v3, especially those sending in testsuite
-   evaluations:
+   evaluations and documentation corrections:
 
 <UL>
 
   <LI>Levente Farkas 
   <LI>J&uuml;rgen Freyh
+  <LI>James Kanze
   <LI>llewelly <!-- Honest, that's the only name in the messages. -->
   <LI>Loren James Rittle
   <LI>George Talbot
